Update release date

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -16,7 +16,7 @@ import { discord, github } from "../links";
 
 # Chatterino Changelog
 
-## 2.5.4 beta 1 (Released TBD) {#2.5.4}
+## 2.5.4 beta 1 (Released 2025-08-31) {#2.5.4}
 
 ### User notes {#2.5.4-user-notes}
 
