Mention where to enable pulse setting

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -86,7 +86,10 @@ When colon-completing emotes in chat, you can now use `:~` to filter for zero-wi
 
 <Credit author="droidicus" helper="pajlada, Nerixyz" prs="6362, 6440" />
 
-In fast chats, you might not notice that your message was successfully sent. Chatterino can now pulse the text input when your messages have been received in chat.
+In fast chats, you might not notice that your message was successfully sent.
+Chatterino can now pulse the text input when your messages have been received
+in chat. You can enable this feature by enabling the "Pulse text input when
+one of your messages is successfully sent" setting.
 
 <Figure src="./changelog/2.5.4/chatinput-pulse.webm" width="350"></Figure>
 
