add a little ocmma (thanks JammehHegeHoge)

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -124,7 +124,7 @@ Chatterino now supports emojis from Unicode 16.0.
 
 <div className="changelog-entry">
 
-The timestamp used in the logs is now customizable similar to the one used in the app itself.
+The timestamp used in the logs is now customizable, similar to the one used in the app itself.
 
 <Credit author="droidicus" helper="Nerixyz, pajlada" prs="6338" />
 
