nit: mention that you have to manually reset the "focus X" bindings

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -378,7 +378,9 @@ Fixes various crashes that could occur when:
   disk. <Credit author="jupjohn" prs="6465" inline />
 
 - Do not set default hotkeys for focusing splits on macOS, as Option + Arrows
-  are used for cursor navigation. <Credit author="jacob-thompson" prs="6470" inline />
+  are used for cursor navigation. If you have started Chatterino prior to
+  this, you will need to manually remove the "focus X" key bindings under
+  "Split". <Credit author="jacob-thompson" prs="6470" inline />
 
 </div>
 
